--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -47,8 +47,40 @@
 .input{
   margin-top: 10px;
 }
-button {
+.create_submit_button {
   margin: 10px 0;
   padding: 5px;
   cursor: pointer;
+}
+
+/* table */
+.table_h1{
+  margin:10px 0px 10px 35px;
+}
+#customers {
+  font-family: Arial, Helvetica, sans-serif;
+  border-collapse: collapse;
+  width: 95%;
+  margin: auto;
+}
+
+#customers td, #customers th {
+  border: 1px solid #ddd;
+  padding: 8px;
+}
+
+#customers tr:nth-child(even){background-color: #f2f2f2;}
+
+#customers tr:hover {background-color: #ddd;}
+
+#customers th {
+  padding-top: 12px;
+  padding-bottom: 12px;
+  text-align: left;
+  background-color: #04AA6D;
+  color: white;
+}
+td:last-child {
+  display: flex;
+  justify-content: space-around;
 }
