--- a/src/views/homePage.ejs
+++ b/src/views/homePage.ejs
@@ -1,39 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home Page</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
+
 <body>
     <div class="topnav">
-        <a class="active" href="#home">Home</a>
-        <a href="#news">News</a>
-        <a href="#contact">Contact</a>
-        <a href="#about">About</a>
+        <a class="active" href="/">Home</a>
+        <a href="create">Create Users</a>
     </div>
 
-    <div class="form">
-        <form action="/create_user" method="post">
-            <fieldset class="form_Add_Users">
-                <legend>Add new user</legend>
-            <div class="input">
-                <label for="lname">Name</label><br>
-                <input type="text" id="lname" name="name">
-            </div>
-            <div class="input">
-                <label for="fname">Email</label><br>
-                <input type="email" id="fname" name="email"><br>
-            </div>    
-            <div class="input">
-                <label for="lname">City</label><br>
-                <input type="text" id="lname" name="city">
-            </div>  
-            <button> Submit </button>
-            </fieldset>
-        </form>
-    </div>
+    <!-- table -->
+    <h1 class="table_h1">Users List</h1>
 
+    <table id="customers">
+        <tr>
+            <th>ID</th>
+            <th>Email</th>
+            <th>Name</th>
+            <th>City</th>
+            <th>Action</th>
+        </tr>
+        <% rows.forEach(row=> { %>
+            <tr>
+                <td>
+                    <%= row.id %>
+                </td>
+                <td>
+                    <%= row.email %>
+                </td>
+                <td>
+                    <%= row.name %>
+                </td>
+                <td>
+                    <%= row.city %>
+                </td>
+                <td>
+                    <a href="/edit_user">Edit</a>
+                    <button id="delete_button">Delete</button>
+                </td>
+            </tr>
+            <% }); %>
+    </table>
 </body>
+
 </html>
