edit & delete mongoDB

--- a/src/views/homePage.ejs
+++ b/src/views/homePage.ejs
@@ -40,7 +40,9 @@
                     <%= row.city %>
                 </td>
                 <td>
-                    <a href="/edit_user/<%= row.id %>">Edit</a>
+                    <form action="/edit_user/<%= row.id %>" method="POST">
+                        <button id="edit_button">Edit</button>
+                    </form>
                     <form action="/delete_user/<%= row.id %>" method="POST">
                         <button id="delete_button">Delete</button>
                     </form>
