<style> remove empty line, unused code

--- a/src/views/deleteUser.ejs
+++ b/src/views/deleteUser.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="topnav">
         <a href="/">Home</a>
-        <a href="create">Delete User</a>
+        <a href="create">Delete user</a>
     </div>
 
     <div class="form">
@@ -32,6 +32,5 @@
             </fieldset>
         </form>
     </div>
-
 </body>
 </html>
