--- a/src/views/editUsers.ejs
+++ b/src/views/editUsers.ejs
@@ -9,7 +9,7 @@
 <body>
     <div class="topnav">
         <a href="/">Home</a>
-        <a href="create">Create Users</a>
+        <a href="create">Create user</a>
     </div>
 
     <div class="form">
