--- a/src/views/createUsers.ejs
+++ b/src/views/createUsers.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Create Users</title>
+    <title>Create user</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
     <div class="topnav">
         <a href="/">Home</a>
-        <a class="active" href="create">Create Users</a>
+        <a class="active" href="create">Create user</a>
     </div>
 
     <div class="form">
