--- a/src/views/homePage.ejs
+++ b/src/views/homePage.ejs
@@ -4,18 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <title>Home page</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
     <div class="topnav">
         <a class="active" href="/">Home</a>
-        <a href="create">Create Users</a>
+        <a href="create">Create user</a>
     </div>
 
     <!-- table -->
-    <h1 class="table_h1">Users List</h1>
+    <h1 class="table_h1">User list</h1>
 
     <table id="customers">
         <tr>
